--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   supabase_flutter: ^1.2.2
   uni_links: ^0.5.1
   validators: ^3.0.0
+  hooks_riverpod: ^2.1.1
 
 dev_dependencies:
   flutter_test:
