--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   uni_links: ^0.5.1
   validators: ^3.0.0
   hooks_riverpod: ^2.1.1
+  uuid: ^3.0.7
+  # flutter_hooks: ^0.18.5+1
 
 dev_dependencies:
   flutter_test:
